tests/ui/ast_statement_from_rule.stderr
error[E0382]: use of moved value: `rule`
  --> tests/ui/ast_statement_from_rule.rs:16:10
   |
13 |     let rule = ast::rule(&loc, hlit, &body).unwrap();
   |         ---- move occurs because `rule` has type `clingo::ast::Rule<'_>`, which does not implement the `Copy` trait
14 |     let stmt: ast::Statement = rule.into();
   |                                     ------ `rule` moved due to this method call
15 |
16 |     drop(rule);
   |          ^^^^ value used here after move
   |
note: `into` takes ownership of the receiver `self`, which moves `rule`
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn into(self) -> T;
   |             ^^^^
help: you can `clone` the value and consume it, but this might not be your desired behavior
   |
14 |     let stmt: ast::Statement = rule.clone().into();
   |                                     ++++++++
